Bug 35779 - Automatic color does not work for the "notes" view
Summary: Automatic color does not work for the "notes" view
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0 target:4.2.1
Keywords:
: 41575 42928 73419 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-29 18:03 UTC by Joao S. O. Bueno
Modified: 2022-09-26 10:01 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
test case of notes problem (12.20 KB, application/vnd.oasis.opendocument.presentation)
2012-09-16 06:35 UTC, sasha.libreoffice
Details
test case with the various edge cases in it for normal and notes view (32.58 KB, application/vnd.oasis.opendocument.presentation)
2014-01-10 16:48 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joao S. O. Bueno 2011-03-29 18:03:33 UTC
In preparing a presentation with a black background, and white text,
I changed just the background to "color" picking Black for the master slide.

The slide text automatically switches to white then, which is nice.

However, on the "notes" view, this automatic text color does not work, and the slide text cannot be read. 

Workaround:
I had to manually set the text color to White on the master slide for being able to proceed
Comment 1 Björn Michaelsen 2011-12-23 11:51:08 UTC Comment hidden (spam)
Comment 2 sasha.libreoffice 2012-03-28 04:45:10 UTC
Thanks for bugreport
Please, attach presentation that demonstrates this problem
Comment 3 Florian Reisinger 2012-08-14 14:03:08 UTC Comment hidden (spam)
Comment 4 Florian Reisinger 2012-08-14 14:04:03 UTC Comment hidden (obsolete, spam)
Comment 5 Florian Reisinger 2012-08-14 14:08:36 UTC Comment hidden (obsolete, spam)
Comment 6 Florian Reisinger 2012-08-14 14:10:38 UTC Comment hidden (obsolete, spam)
Comment 7 sasha.libreoffice 2012-09-16 06:35:00 UTC
Created attachment 67226 [details]
test case of notes problem
Comment 8 sasha.libreoffice 2012-09-16 06:36:34 UTC
reproduced in 3.3.4 and 3.6.1 on Fedora 64 bit
Try to compare tabs "Normal" and "Notes" in attachment
Comment 9 Jacqueline Rahemipour 2013-03-23 20:00:29 UTC
Confirmed with LibO 4.0

font color "automatic" is not respected in notes view
Comment 10 Jacqueline Rahemipour 2013-03-23 20:15:22 UTC
*** Bug 42928 has been marked as a duplicate of this bug. ***
Comment 11 Jacqueline Rahemipour 2013-03-23 20:18:27 UTC
*** Bug 41575 has been marked as a duplicate of this bug. ***
Comment 12 Dave Airlie 2014-01-09 00:44:00 UTC
*** Bug 73419 has been marked as a duplicate of this bug. ***
Comment 13 Caolán McNamara 2014-01-10 11:18:29 UTC
hmm, seems to be triggered by http://cgit.freedesktop.org/libreoffice/core/commit/?id=2d06094c701262ef54604be206c25dd87a77d224
Comment 14 Caolán McNamara 2014-01-10 13:12:15 UTC
sigh, the algorithm is that the editengine is told the background its on, but it is told the background of the *page* its on, which is white, not the background of the frame that its in which is black.
Comment 15 Caolán McNamara 2014-01-10 16:48:49 UTC
Created attachment 91826 [details]
test case with the various edge cases in it for normal and notes view
Comment 16 Commit Notification 2014-01-10 16:53:57 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=76a0b3170664b19c3eb66edc8fccb04dc5485387

Resolves: fdo#35779 set the bg color of the editeng from the text shape



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2014-01-10 17:42:11 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b72f3f40828cf6761a8a3cee0dfe2f8a9d4e4a21&h=libreoffice-4-2

Resolves: fdo#35779 set the bg color of the editeng from the text shape


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 sasha.libreoffice 2014-01-11 07:27:53 UTC
Thanks for fixing this bug