Resolves: fdo#35779 set the bg color of the editeng from the text shape

Change-Id: I75feaea2dbd6c703cb3093c119a69985ecd89419
(cherry picked from commit 76a0b3170664b19c3eb66edc8fccb04dc5485387)